feat: add overview divider colored

--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -71,7 +71,7 @@
     <div class="exclusive__img position-absolute top-0 d-none d-sm-block"
          [ngStyle]="scrollTransformStyle"></div>
     <div class="px-4 px-sm-8 px-md-12 pt-25 align-items-center row flex-column-reverse flex-md-row">
-      <div class="position-relative col-12 col-md-7 pe-0 exclusive__img-animation">
+      <div class="position-relative col-12 col-md-7 pe-md-0 exclusive__img-animation">
         <img src="assets/img/logo/logo_chengkung_university.png" alt="exclusive-img"
              class="bg-black border-radius-xl component-product-card__img"
              style="height: 500px">
@@ -108,4 +108,6 @@
     <img src="assets/img/illustration/molecular_chain_b.svg" alt="illustration-chain-b"
          class="position-absolute d-none d-sm-block successful-case__illustration">
   </section>
+
+  <hr class="divider-colored border-0 m-0 opacity-100">
 </section>
