--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.scss
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.scss
@@ -199,6 +199,11 @@
   }
 }
 
+.divider-colored {
+  height: 2px;
+  background: linear-gradient(90deg, map-get($azure-light, 2) 0%, map-get($cyan-light, 2) 33.3%, map-get($green-light, 2) 66.6%, #FFFb9D 100%);
+}
+
 
 @keyframes fade-in-left-top {
   from {
