--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -1,4 +1,4 @@
-<section class="overview-page overflow-y-auto overflow-x-hidden">
+<section class="overflow-y-auto overflow-x-hidden">
   <section class="main-img-container position-relative">
     <div class="d-flex main-img-container__gradient-bg">
       <p class="main-img-container__syntron-text text-white d-flex justify-content-center align-items-center">
@@ -12,7 +12,7 @@
   <section class="overflow-x-hidden">
     <div class="d-flex justify-content-between align-items-center p-4 p-sm-8 p-md-12">
       <div class="d-flex flex-column justify-content-center news">
-        <h2 class="px-3 text-nowrap">最新消息</h2>
+        <h1 class="px-3 text-nowrap">最新消息</h1>
         <h3 class="px-3">NEWS</h3>
         <app-text-button class="news__view-all-button">
           瀏覽全部
@@ -44,7 +44,7 @@
     <div class="product__img position-absolute top-0 d-none d-sm-block"
          [ngStyle]="scrollTransformStyle"></div>
     <div class="d-flex flex-column align-items-center product__titles">
-      <h2>專業化產品</h2>
+      <h1>專業化產品</h1>
       <h3>SPECIALIZED OFFERINGS</h3>
     </div>
 
@@ -79,7 +79,7 @@
              class="position-absolute d-none d-sm-block exclusive__illustration">
       </div>
       <div class="exclusive__content border-radius-xl px-md-10 py-md-25 col-12 col-md-5 text-center text-md-start mb-7_5 mb-md-0">
-        <h2 class="exclusive__text-animation">優勢</h2>
+        <h1 class="exclusive__text-animation">優勢</h1>
         <h3 class="my-2_5 exclusive__text-animation">EXCLUSIVE</h3>
         <p class="font-sm exclusive__text-animation">
           伈創資訊期望以提供客戶驚豔且創新的產品技術為出發點，不斷開創同業之先例，而經營面則持續投注新穎、國際化的概念。本公司目前在台灣、中國都有相關業務進行，近年更預計將業務擴大到周邊國家。</p>
@@ -88,7 +88,7 @@
   </section>
 
   <section class="successful-case my-25 text-center pt-15 position-relative">
-    <h2 class="successful-case__text-animation">成功案例</h2>
+    <h1 class="successful-case__text-animation">成功案例</h1>
     <h3 class="successful-case__text-animation">SUCCESSFUL CASE</h3>
     <div class="d-inline-block d-sm-flex successful-case__playing-animation mt-5">
       <ng-container *ngFor="let successfulCase of successfulCases">
