--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -1,4 +1,6 @@
 <section class="overflow-y-auto overflow-x-hidden">
+  <app-header-spacing bgClass="bg-azure-2"></app-header-spacing>
+
   <section class="main-img-container position-relative">
     <div class="d-flex main-img-container__gradient-bg">
       <p class="main-img-container__syntron-text text-white d-flex justify-content-center align-items-center">
