--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,3 @@
-@import "mixins";
-
 .container {
-  max-height: calc(100vh - 3.125rem);
-  @include generateStyleByBreakpoint("sm") {
-    max-height: calc(100vh - 5.625rem);
-  }
+  max-height: 100vh;
 }
