--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -5,7 +5,7 @@
     <small>@copyright -2024 Syntrontech All Rights Reserved</small>
   </div>
 
-  <div class="d-flex flex-column flex-sm-row align-items-center">
+  <div class="d-flex flex-column flex-sm-row align-items-center component-footer__text-animation">
     <div class="me-sm-25 text-center text-sm-start">
       <h1 class="text-black-1 text-nowrap">聯絡我們</h1>
       <h3 class="text-black-2 mb-5 mb-sm-10 text-nowrap">CONTACT US</h3>
