--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main class="container overflow-y-auto px-0">
+<main class="container overflow-y-auto overflow-x-hidden px-0">
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </main>
