feat: add main title

--- a/src/app/modules/guideline/pages/news-page/news-page.component.html
+++ b/src/app/modules/guideline/pages/news-page/news-page.component.html
@@ -1,4 +1,30 @@
 <section>
   <app-header-spacing></app-header-spacing>
   <app-breadcrumb [breadcrumbs]="breadcrumbs"></app-breadcrumb>
+
+  <section class="row main-title d-flex flex-column-reverse flex-md-row mb-30">
+    <img src="assets/img/logo/logo_chengkung_university.png" alt="news-main-img" class="bg-black col-12 col-md-8">
+    <div class="position-relative col-12 col-md-4 p-10 d-flex flex-md-column justify-content-center bg-black-9">
+      <div>
+        <h1 class="mb-2_5">最新消息</h1>
+        <p>在這裡，您將隨時了解到我們的最新消息和動態，保持與我們的業務合作夥伴的緊密聯緊。掌握最新，保持競爭力！</p>
+      </div>
+
+      <img
+        class="main-title__illustration position-absolute"
+        src="assets/img/illustration/molecular_chain_a.svg" alt="illustration-chain-a">
+    </div>
+  </section>
+
+  <section class="d-flex flex-column flex-md-row">
+    <aside class="d-none d-md-flex">
+      這邊是側邊欄
+    </aside>
+    <article>
+      <h2>全部最新消息</h2>
+      <section>
+
+      </section>
+    </article>
+  </section>
 </section>
