create production routing

--- a/src/app/modules/production/production.component.html
+++ b/src/app/modules/production/production.component.html
@@ -1,1 +1,4 @@
-<p>production works!</p>
+<div class="d-flex justify-content-center">
+  <app-tab-set [tabs]="['照護服務', '藥品管理', '叫號系統', '雲端儲存']"></app-tab-set>
+</div>
+000000
