--- a/src/app/modules/shared/components/menu-sub-button/menu-sub-button.component.html
+++ b/src/app/modules/shared/components/menu-sub-button/menu-sub-button.component.html
@@ -1,6 +1,6 @@
 <button id="{{id}}"
         type="button"
         class="btn border-0 text-black-2 font-sm px-4_5 d-flex align-items-center bg-black-9 bg-black-7--hover bg-black-8--active w-100 component-menu-sub-button">
-  <app-item-point-gray-icon class="component-menu-sub-button__icon d-flex justify-content-center align-items-center me-2_5"></app-item-point-gray-icon>
+  <app-item-point-icon class="component-menu-sub-button__icon d-flex justify-content-center align-items-center me-2_5"></app-item-point-icon>
   <ng-content></ng-content>
 </button>
