--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -11,10 +11,10 @@
     <app-news class="position-absolute bottom-0 end-0"></app-news>
   </section>
 
-  <section class="overflow-x-hidden">
-    <div class="d-flex justify-content-between align-items-center p-4 p-sm-8 p-md-12">
-      <div class="d-flex flex-column justify-content-center news">
-        <h1 class="px-3 text-nowrap">最新消息</h1>
+  <section class="overflow-x-hidden news d-flex justify-content-between">
+    <div class="w-100 d-flex justify-content-between align-items-center p-4 p-sm-8 p-md-12">
+      <div class="d-flex flex-column justify-content-center news__title">
+        <h2 class="px-3 text-nowrap">最新消息</h2>
         <h3 class="px-3">NEWS</h3>
         <app-text-button class="news__view-all-button">
           瀏覽全部
@@ -46,7 +46,7 @@
     <div class="product__img position-absolute top-0 d-none d-sm-block"
          [ngStyle]="scrollTransformStyle"></div>
     <div class="d-flex flex-column align-items-center product__titles">
-      <h1>專業化產品</h1>
+      <h2>專業化產品</h2>
       <h3>SPECIALIZED OFFERINGS</h3>
     </div>
 
@@ -74,14 +74,13 @@
          [ngStyle]="scrollTransformStyle"></div>
     <div class="px-4 px-sm-8 px-md-12 pt-25 align-items-center row flex-column-reverse flex-md-row">
       <div class="position-relative col-12 col-md-7 pe-md-0 exclusive__img-animation">
-        <img src="assets/img/logo/logo_chengkung_university.png" alt="exclusive-img"
-             class="bg-black border-radius-xl component-product-card__img"
-             style="height: 500px">
+        <img src="assets/img/iStock/iStock-1082027390.jpg" alt="exclusive-img"
+             class="w-100 border-radius-xl component-product-card__img">
         <img src="assets/img/illustration/molecular_chain_a.svg" alt="illustration-chain-a"
              class="position-absolute d-none d-sm-block exclusive__illustration">
       </div>
-      <div class="exclusive__content border-radius-xl px-md-10 py-md-25 col-12 col-md-5 text-center text-md-start mb-7_5 mb-md-0">
-        <h1 class="exclusive__text-animation">優勢</h1>
+      <div class="exclusive__content border-radius-xl px-md-10 py-md-20 col-12 col-md-5 text-center text-md-start mb-7_5 mb-md-0">
+        <h2 class="exclusive__text-animation">優勢</h2>
         <h3 class="my-2_5 exclusive__text-animation">EXCLUSIVE</h3>
         <p class="font-sm exclusive__text-animation">
           伈創資訊期望以提供客戶驚豔且創新的產品技術為出發點，不斷開創同業之先例，而經營面則持續投注新穎、國際化的概念。本公司目前在台灣、中國都有相關業務進行，近年更預計將業務擴大到周邊國家。</p>
@@ -90,7 +89,7 @@
   </section>
 
   <section class="successful-case my-25 text-center pt-15 position-relative">
-    <h1 class="successful-case__text-animation">成功案例</h1>
+    <h2 class="successful-case__text-animation">成功案例</h2>
     <h3 class="successful-case__text-animation">SUCCESSFUL CASE</h3>
     <div class="d-inline-block d-sm-flex successful-case__playing-animation mt-5">
       <ng-container *ngFor="let successfulCase of successfulCases">
