--- a/src/app/modules/shared/components/product-card/product-card.component.html
+++ b/src/app/modules/shared/components/product-card/product-card.component.html
@@ -1,13 +1,13 @@
 <div class="position-relative component-product-card cursor-pointer">
   <span class="d-block component-product-card__spacing"></span>
 
-  <img src="assets/img/logo/logo_chengkung_university.png" alt="product-card-{{type}}-img"
-       class="border-radius-xl bg-black component-product-card__img position-absolute top-0 z-2">
+  <img [src]="getImg(type)" alt="product-card-{{type}}-img"
+       class="border-radius-xl component-product-card__img position-absolute top-0 z-2">
 
   <div
     class="component-product-card__content bg-white border-radius-xl px-3_5 pb-5 overflow-hidden position-relative d-flex flex-column justify-content-between"
     [ngClass]="getPseudoClass()">
-    <div class="d-flex flex-column align-items-center mt-40 position-relative z-2">
+    <div class="d-flex flex-column align-items-center mt-45 mb-md-20 position-relative z-2">
       <p class="font-xl text-black-1 mb-2 component-product-card__text-animation"
          [ngSwitch]="type">
         <ng-container *ngSwitchCase="'healthcare'">照護服務</ng-container>
