--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main class="container overflow-y-auto overflow-x-hidden px-0">
+  <app-header-spacing></app-header-spacing>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </main>
