--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -84,6 +84,9 @@
       @if ($key != "p" and $key != "small" and $key != "button") {
         font-weight: bold !important;
       }
+      @if (map-has-key($line-height-level, $key)) {
+        line-height: map-get($line-height-level, $key) !important;
+      }
     }
   }
 
