feat: 調整麵包屑元件

--- a/src/app/modules/shared/components/header-spacing/header-spacing.component.scss
+++ b/src/app/modules/shared/components/header-spacing/header-spacing.component.scss
@@ -1,7 +1,8 @@
 @import "mixins";
+@import "variables";
 
 .component-header-spacing {
-  height: 5.625rem;
+  height: $header-height;
   @include generateStyleByMaxBreakpoint("sm") {
     height: 3.125rem;
   }
