--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,8 @@ $pseudo-class: "hover", "disabled", "active", "checked", "first-child",
   "last-child" // "first-of-type", "last-of-type", , "empty", "only-child"
 ;
 
+$header-height: 5.625rem;
+
 $text-level: (
   h1: 2.75rem,
   h2: 2.25rem,
