--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
-<main class="container overflow-y-auto overflow-x-hidden px-0">
+<main class="container overflow-y-auto vh-100 overflow-x-hidden px-0">
   <app-header-spacing></app-header-spacing>
+  <app-breadcrumb></app-breadcrumb>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </main>
