feat: news list render with title, description, images

--- a/src/app/modules/guideline/pages/news-page/news-page.component.scss
+++ b/src/app/modules/guideline/pages/news-page/news-page.component.scss
@@ -16,3 +16,25 @@
     }
   }
 }
+
+.news-list {
+  &__img-container {
+    min-width: 17.8125rem;
+    min-height: 11.25rem;
+  }
+
+  &__img {
+    max-width: 17.8125rem;
+    max-height: 11.25rem;
+  }
+
+  &__divider {
+    height: 2px;
+  }
+
+  &__description {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+  }
+}
