--- a/src/app/modules/guideline/pages/news-page/news-page.component.html
+++ b/src/app/modules/guideline/pages/news-page/news-page.component.html
@@ -3,7 +3,7 @@
   <app-breadcrumb [breadcrumbs]="breadcrumbs"></app-breadcrumb>
 
   <section class="row main-title d-flex flex-column-reverse flex-md-row">
-    <img src="assets/img/logo/logo_chengkung_university.png" alt="news-main-img" class="bg-black col-12 col-md-8">
+    <img src="assets/img/iStock/iStock-1717950594.jpg" alt="news-main-img" class="col-12 col-md-8 pe-0">
     <div class="position-relative col-12 col-md-4 p-10 d-flex flex-md-column justify-content-center bg-black-9">
       <div>
         <h1 class="mb-2_5">最新消息</h1>
@@ -16,18 +16,32 @@
     </div>
   </section>
 
-  <section class="d-flex flex-column flex-md-row px-30 py-25">
+  <section class="d-flex flex-column flex-md-row px-30 py-25 news-list">
     <aside class="d-none d-md-flex flex-md-column">
       <h4 class="mb-4">分類</h4>
       <app-tab-list [tabs]="tabs" [focusTabIndex]="0"></app-tab-list>
     </aside>
-    <article class="w-100">
-      <h2>全部最新消息</h2>
-      <section>
-        <div style="width: 100px;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 2;overflow: hidden">
-          testtesttesttesttesttesttesttest
-        </div>
-      </section>
-    </article>
+    <section class="w-100">
+      <h2 class="mb-6">全部最新消息</h2>
+      <ul>
+        <li *ngFor="let news of newsList;let i = index">
+          <div class="d-flex">
+            <div class="news-list__img-container d-flex justify-content-center align-items-center me-4">
+              <img
+                [src]="news.image ? news.image : 'assets/img/news/image_default_s_pc.png'" alt="news_{{i}}"
+                class="border-radius-xl news-list__img">
+            </div>
+            <div>
+              <p>{{news.date}}</p>
+              <h4 class="my-2">{{news.title}}</h4>
+              <p class="font-sm overflow-hidden news-list__description">{{news.description}}</p>
+            </div>
+          </div>
+          <hr
+            *ngIf="i !== newsList.length - 1"
+            class="w-100 border-0 bg-black-4 opacity-100 my-6 news-list__divider">
+        </li>
+      </ul>
+    </section>
   </section>
 </section>
