--- a/src/app/modules/news-center/pages/news-page/news-page.component.html
+++ b/src/app/modules/news-center/pages/news-page/news-page.component.html
@@ -1,6 +1,6 @@
 <section>
   <section class="row main-title d-flex flex-column-reverse flex-md-row">
-    <img src="assets/img/iStock/iStock-1717950594.jpg" alt="news-main-img" class="col-12 col-md-8 pe-0">
+    <img src="../../../../../assets/img/iStock/iStock-1717950594.jpg" alt="news-main-img" class="col-12 col-md-8 pe-0">
     <div class="position-relative col-12 col-md-4 p-10 d-flex flex-md-column justify-content-center bg-black-9">
       <div>
         <h1 class="mb-2_5">最新消息</h1>
@@ -9,7 +9,7 @@
 
       <img
         class="main-title__illustration position-absolute"
-        src="assets/img/illustration/molecular_chain_a.svg" alt="illustration-chain-a">
+        src="../../../../../assets/img/illustration/molecular_chain_a.svg" alt="illustration-chain-a">
     </div>
   </section>
 
