--- a/src/app/modules/common/components/product-card/product-card.component.scss
+++ b/src/app/modules/common/components/product-card/product-card.component.scss
@@ -1,5 +1,5 @@
-@import "colors";
-@import "mixins";
+@import "src/styles/colors";
+@import "src/styles/mixins";
 
 .component-product-card {
   width: fit-content;
