--- a/src/app/modules/common/pages/home-page/home-page.component.scss
+++ b/src/app/modules/common/pages/home-page/home-page.component.scss
@@ -1,5 +1,5 @@
-@import "colors";
-@import "mixins";
+@import "src/styles/colors";
+@import "src/styles/mixins";
 
 .main-img-container {
   &__gradient-bg {
@@ -110,11 +110,11 @@
   &__img {
     width: 300rem;
     height: 11.44rem;
-    background-image: url(~src/assets/img/homepage_pc/image_product_pc.png);
+    background-image: url(../../../../../assets/img/homepage_pc/image_product_pc.png);
     background-repeat: space;
     z-index: -1;
     @include generateStyleByMaxBreakpoint("md") {
-      background-image: url(~src/assets/img/homepage_pad/image_product_pad.png);
+      background-image: url(../../../../../assets/img/homepage_pad/image_product_pad.png);
     }
     @include generateStyleByMaxBreakpoint("sm") {
       display: none;
@@ -140,11 +140,11 @@
   &__img {
     width: 500rem;
     height: 11.69rem;
-    background-image: url(~src/assets/img/homepage_pc/image_exclusive_pc.png);
+    background-image: url(../../../../../assets/img/homepage_pc/image_exclusive_pc.png);
     background-repeat: space;
     z-index: -1;
     @include generateStyleByMaxBreakpoint("md") {
-      background-image: url(~src/assets/img/homepage_pad/image_exclusive_pad.png);
+      background-image: url(../../../../../assets/img/homepage_pad/image_exclusive_pad.png);
     }
     @include generateStyleByMaxBreakpoint("sm") {
       display: none;
