feat: pagination and tab list logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main class="container overflow-y-auto vh-100 overflow-x-hidden px-0">
+<main class="container overflow-y-auto vh-100 overflow-x-hidden px-0" id="main">
   <app-header-spacing></app-header-spacing>
   <app-breadcrumb></app-breadcrumb>
   <router-outlet></router-outlet>
