--- a/src/app/modules/shared/components/tab-list/tab-list.component.html
+++ b/src/app/modules/shared/components/tab-list/tab-list.component.html
@@ -9,7 +9,8 @@
         'text-primary-2': focusTabIndex === i
       }"
       (mousedown)="mouseDownChangeClass(id, i)"
-      (mouseup)="mouseUpChangeClass(id, i)">
+      (mouseup)="mouseUpChangeClass(id, i)"
+      (click)="changeTab.emit(tab)">
       <app-item-point-icon
         id="{{id}}_{{i}}_icon"
         class="me-4"
