--- a/src/app/modules/news-center/pages/news-page/news-page.component.scss
+++ b/src/app/modules/news-center/pages/news-page/news-page.component.scss
@@ -19,13 +19,21 @@
 
 .news-list {
   &__img-container {
-    min-width: 17.8125rem;
-    min-height: 11.25rem;
+    min-width: 6.25rem;
+    min-height: 6.25rem;
+    @include generateStyleByBreakpoint("sm") {
+      min-width: 17.8125rem;
+      min-height: 11.25rem;
+    }
   }
 
   &__img {
-    max-width: 17.8125rem;
-    max-height: 11.25rem;
+    max-width: 6.25rem;
+    max-height: 6.25rem;
+    @include generateStyleByBreakpoint("sm") {
+      max-width: 17.8125rem;
+      max-height: 11.25rem;
+    }
   }
 
   &__divider {
@@ -33,8 +41,10 @@
   }
 
   &__description {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4;
+    @include generateStyleByBreakpoint("sm") {
+      display: -webkit-box !important;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 4;
+    }
   }
 }
