feat: replace news const to fetch json

--- a/src/app/modules/common/components/news/news.component.html
+++ b/src/app/modules/common/components/news/news.component.html
@@ -1,5 +1,5 @@
 <article class="component-news">
-  <img src="../../../../../assets/img/icon/round-out.png" alt="round-out" class="component-news__round-out position-absolute bottom-0">
+  <img src="assets/img/icon/round-out.png" alt="round-out" class="component-news__round-out position-absolute bottom-0">
 
   <ul class="component-news__tab overflow-hidden bg-white">
     <li *ngFor="let news of news"
