--- a/src/app/modules/common/pages/home-page/home-page.component.html
+++ b/src/app/modules/common/pages/home-page/home-page.component.html
@@ -7,7 +7,7 @@
         SYNTRON
       </p>
       <img
-        src="../../../../../assets/img/logo/logo_chengkung_university.png"
+        src="assets/img/logo/logo_chengkung_university.png"
         alt=""
         class="h-100 bg-black main-img-container__img"
       />
@@ -92,9 +92,9 @@
          [ngStyle]="scrollTransformStyle"></div>
     <div class="px-4 px-sm-8 px-md-12 pt-25 align-items-center row flex-column-reverse flex-md-row">
       <div class="position-relative col-12 col-md-7 pe-md-0 exclusive__img-animation">
-        <img src="../../../../../assets/img/iStock/iStock-1082027390.jpg" alt="exclusive-img"
+        <img src="assets/img/iStock/iStock-1082027390.jpg" alt="exclusive-img"
              class="w-100 border-radius-xl component-product-card__img">
-        <img src="../../../../../assets/img/illustration/molecular_chain_a.svg" alt="illustration-chain-a"
+        <img src="assets/img/illustration/molecular_chain_a.svg" alt="illustration-chain-a"
              class="position-absolute d-none d-sm-block exclusive__illustration">
       </div>
       <div class="exclusive__content border-radius-xl px-md-10 py-md-20 col-12 col-md-5 text-center text-md-start mb-7_5 mb-md-0">
