--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -1,3 +1,4 @@
+<hr class="divider-colored border-0 m-0 opacity-100" />
 <footer
   class="d-flex flex-column-reverse justify-content-between align-items-center flex-md-row bg-black-9 px-8 pt-4_5 pb-7_5 px-sm-15 pb-sm-10 pt-sm-14_5 px-md-10 py-md-15 component-footer">
   <div class="d-flex flex-column align-items-center align-items-md-start mt-10 mt-md-0">
