--- a/src/app/modules/shared/components/footer/footer.component.scss
+++ b/src/app/modules/shared/components/footer/footer.component.scss
@@ -21,3 +21,8 @@
     animation: fade-in-right 1s ease-in-out, twink 1s ease-in-out;
   }
 }
+
+.divider-colored {
+  height: 2px;
+  background: linear-gradient(90deg, map-get($azure-light, 2) 0%, map-get($cyan-light, 2) 33.3%, map-get($green-light, 2) 66.6%, #FFFb9D 100%);
+}
