--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -27,7 +27,8 @@
           </app-borderless-button>
         </li>
         <li>
-          <app-borderless-button>聯絡我們</app-borderless-button>
+          <app-borderless-button
+          (click)="contactUs()">聯絡我們</app-borderless-button>
         </li>
       </ul>
 
