--- a/src/app/modules/common/components/news/news.component.html
+++ b/src/app/modules/common/components/news/news.component.html
@@ -2,8 +2,10 @@
   <img src="assets/img/icon/round-out.png" alt="round-out" class="component-news__round-out position-absolute bottom-0">
 
   <ul class="component-news__tab overflow-hidden bg-white">
-    <li *ngFor="let news of news"
-        class="d-flex justify-content-between align-items-center position-relative component-news__content cursor-pointer">
+    <li
+      *ngFor="let news of news"
+      (click)="toNewsDetail(news.id)"
+      class="d-flex justify-content-between align-items-center position-relative component-news__content cursor-pointer">
       <div class="h-100 d-flex align-items-center">
         <div class="mx-5 text-nowrap">
           <p>{{news.date}}</p>
