--- a/src/app/modules/common/pages/home-page/home-page.component.scss
+++ b/src/app/modules/common/pages/home-page/home-page.component.scss
@@ -4,7 +4,10 @@
 .main-img-container {
   &__gradient-bg {
     background: linear-gradient(180deg, map-get($azure-light, 2) 0%, map-get($cyan-light, 2) 33.3%, map-get($green-light, 2) 66.6%, #FFFb9D 100%);
-    height: 500px;
+    height: 570px;
+    @include generateStyleByBreakpoint("sm") {
+      height: 742px;
+    }
   }
 
   &__syntron-text {
@@ -13,10 +16,23 @@
   }
 
   &__img {
-    border-top-left-radius: 3rem;
-    border-bottom-left-radius: 3rem;
     padding-right: 0;
     width: calc(100% - 60px);
+    @include generateStyleByBreakpoint("sm") {
+      border-top-left-radius: 3rem;
+      border-bottom-left-radius: 3rem;
+    }
+  }
+
+  &__title {
+    top: 323px;
+    left: 56px;
+    max-width: 300px;
+    @include generateStyleByBreakpoint("sm") {
+      top: 466px;
+      left: 60px;
+      max-width: 370px;
+    }
   }
 }
 
